--- a/index.html
+++ b/index.html
@@ -4,65 +4,101 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Universal</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto+Slab:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
       <div class="header-top">
         <div class="container">
-          <div class="header-sections">
-            <button class="section-button">
-              <div class="section-button__line"></div>
-              <div
-                class="section-button__line section-button__line-short"
-              ></div>
-              <div class="section-button__line"></div>
-            </button>
-            <span class="section__text">Sections</span>
+          <div class="header-upper">
+            <div class="header-upper__left">
+              <div class="header-sections">
+                <button class="section-button">
+                  <div class="section-button__line"></div>
+                  <div
+                    class="section-button__line section-button__line-short"
+                  ></div>
+                  <div class="section-button__line"></div>
+                </button>
+                <span class="section__text">Sections</span>
+              </div>
+              <div class="search header__search">
+                <img
+                  class="search__img"
+                  src="img/header/Search.svg"
+                  alt="Icon: search"
+                />
+                <input
+                  type="text"
+                  class="input search__input"
+                  placeholder="Search"
+                />
+              </div>
+            </div>
+            <!-- /.header-upper__left -->
+            <div class="header-upper__right">
+              <div class="header__subscribe">
+                <img
+                  src="img/header/image-subscribe.png"
+                  alt="Image subscribe"
+                  class="subscribe__img"
+                />
+                <div class="subscribe-info">
+                  <span class="subscribe__text">Subcribe now</span>
+                  <span class="subscribe__price">3 month for $19</span>
+                </div>
+              </div>
+              <!-- /.header__subscribe -->
+              <div class="header__sign">
+                <img
+                  src="img/header/Man.svg"
+                  alt="Icon: user"
+                  class="sign__img"
+                />
+                <span class="sign__text">Sign in</span>
+              </div>
+              <!-- /.header__user -->
+            </div>
+            <!-- /.header-upper__right -->
           </div>
-          <form action="#" class="search header__search">
-            <img src="img/header/Search.svg" alt="Icon: search" />
-            <input
-              type="text"
-              class="input search__input"
-              placeholder="Search"
-            />
-          </form>
-          <div class="header__subscribe">
-            <img
-              src="img/header/image-subscribe.png"
-              alt="Image subscribe"
-              class="subscribe__img"
-            />
-            <span class="subscribe__text">Subcribe now</span>
-            <span class="subcribe__date">3 month for $19</span>
+          <!-- /.header-upper -->
+          <div class="header-bottom">
+            <div class="header-bottom__title">
+              <img
+                src="img/header/image-liberty.png"
+                alt="statue of Liberty"
+                class="header-bottom__img"
+              />
+              <span class="header-bottom__text">
+                Boston and New York Bear Brunt
+              </span>
+            </div>
+            <!-- /.header-bottom__title -->
+            <a href="index.html" class="header-logo"
+              ><img src="img/header/logo.svg" alt="Logo" class="logo"
+            /></a>
+            <div class="header-bottom__info">
+              <span class="header-bottom__date">Monday, January 1, 2018</span>
+              <div class="header-bottom__weather">
+                <img
+                  src="img/header/Sun.svg"
+                  alt="Weather image"
+                  class="weather__img"
+                />
+                <span class="weather__degree">- 23 °C</span>
+              </div>
+            </div>
+            <!-- /.header-bottom__info -->
           </div>
-          <!-- /.header__subscribe -->
-          <div class="header__sign">
-            <img src="img/header/Man.svg" alt="Icon: user" class="sign__img" />
-            <span class="sign__text">Sign in</span>
-          </div>
-          <!-- /.header__user -->
+          <!-- /.header-bottom -->
         </div>
-        <!-- /.container -->
+        <!-- /.header-top -->
       </div>
-      <!-- /.header-top -->
-
-      <div class="header-bottom">
-        <div class="header-bottom__text">Boston and New York Bear Brunt</div>
-        <img src="img/header/logo.svg" alt="Logo" class="logo" />
-        <div class="header-bottom__date">Monday, January 1, 2018</div>
-        <div class="header-bottom__weather">
-          <img
-            src="img/header/Sun.svg"
-            alt="Weather image"
-            class="weather__img"
-          />
-          <span class="weather__degree">- 23 °C</span>
-        </div>
-      </div>
-      <!-- /.header-bottom -->
-
+      <!-- /.container -->
       <div class="header-navbar">
         <div class="container">
           <ul class="navbar-menu">
@@ -107,5 +143,159 @@
       <!-- /.header-navbar -->
     </header>
     <!-- /.header -->
+    <section class="recommended">
+      <div class="container">
+        <div class="article">
+          <div class="article-card">
+            <a href="#" class="article__title"
+              >25 Songs That Tell Us Where Music Is Going</a
+            >
+            <img
+              src="img/recommended/article-1.png"
+              alt="article 1"
+              class="article__img"
+            />
+          </div>
+          <div class="divider"></div>
+          <div class="article-card">
+            <a href="#" class="article__title"
+              >These Ancient Assassins Eat Their Own Kind</a
+            >
+            <img
+              src="img/recommended/article-2.png"
+              alt="article 2"
+              class="article__img"
+            />
+          </div>
+          <div class="divider"></div>
+          <div class="article-card">
+            <a href="#" class="article__title"
+              >How Do You Teach People to Love Difficult Music?</a
+            >
+            <img
+              src="img/recommended/article-3.png"
+              alt="article 3"
+              class="article__img"
+            />
+          </div>
+          <div class="divider"></div>
+          <div class="article-card">
+            <a href="#" class="article__title"
+              >International Soccer’s Man of Mystery</a
+            >
+            <img
+              src="img/recommended/article-4.png"
+              alt="article 4"
+              class="article__img"
+            />
+          </div>
+        </div>
+        <!-- /.articles -->
+
+        <div class="selection">
+          <div class="picture-block">
+            <div class="picture-block__item">
+              <img
+                class="picture-block__img"
+                src="img/recommended/slide-1.png"
+                alt="slide-1"
+              />
+              <div class="picture-block__author">
+                <img
+                  src="img/recommended/avatar.png"
+                  alt=""
+                  class="picture-block__author__avatar"
+                />
+                <div class="picture-block__author-name">
+                  By Benjamin Turner
+                  <span class="picture-block__job">Traveler</span>
+                </div>
+              </div>
+              <div class="picture-info">
+                <span class="picture-info__category">Destinations</span>
+                <h2 class="picture-info__title">
+                  In Southeast England, White Cliffs and Fish
+                </h2>
+
+                <div class="button-block">
+                  <button class="button picture__button">
+                    <span class="button__text">Read more</span>
+                    <img
+                      src="img/recommended/Arrow.svg"
+                      alt="Icon: arrow"
+                      class="button__img"
+                    />
+                  </button>
+                  <div class="player">
+                    <div class="player__icon">
+                      <div class="player__icon-triangle"></div>
+                    </div>
+                    <div class="player__info">
+                      <span class="player__text"
+                        >The chalk cliff of Beachy Head</span
+                      >
+                      <span class="player__time">18:05</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- /.picture__block -->
+          <div class="selection-choice">
+            <div class="choice__title">Recommended for you</div>
+
+            <div class="choice-card">
+              <span class="choice-card__title choice-card__title-bluegreen75"
+                >Food</span
+              >
+              <p class="choice-card__text choice-card__text-video">
+                For Chicken-Fried Steak, Too Much Is Just Enough
+              </p>
+            </div>
+
+            <div class="choice-card">
+              <span class="choice-card__title choice-card__title-greyblue75"
+                >Cars</span
+              >
+              <p class="choice-card__text">
+                Storm Has Car Dealers Doing Swift Business
+              </p>
+            </div>
+
+            <div class="choice-card">
+              <span class="choice-card__title choice-card__title-purple75"
+                >Movies</span
+              >
+              <p class="choice-card__text">
+                War Is Hell? In New Military Dramas, It’s One-Dimensional
+              </p>
+            </div>
+
+            <div class="choice-card">
+              <span class="choice-card__title choice-card__title-orange75"
+                >NFL</span
+              >
+              <p class="choice-card__text choice-card__text-video">
+                11 surprising stat rankings for active NFL players
+              </p>
+            </div>
+
+            <div class="choice-card">
+              <span class="choice-card__title choice-card__title-green75"
+                >Tech Reviews</span
+              >
+              <p class="choice-card__text">
+                The bookcases you can buy online and assemble yourself
+              </p>
+            </div>
+          </div>
+          <!-- /.selection-choice -->
+        </div>
+        <!-- /.selection -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.recommended -->
   </body>
 </html>
