--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header class="header">
@@ -16,16 +18,17 @@
         <div class="container">
           <div class="header-upper">
             <div class="header-upper__left">
-              <div class="header-sections">
+              <div class="header-section">
                 <button class="section-button">
-                  <div class="section-button__line"></div>
-                  <div
+                  <span class="section-button__line"></span>
+                  <span
                     class="section-button__line section-button__line-short"
-                  ></div>
-                  <div class="section-button__line"></div>
+                  ></span>
+                  <span class="section-button__line"></span>
                 </button>
-                <span class="section__text">Sections</span>
+                <span class="header-section__text">Sections</span>
               </div>
+
               <div class="search header__search">
                 <img
                   class="search__img"
@@ -45,15 +48,15 @@
                 <img
                   src="img/header/image-subscribe.png"
                   alt="Image subscribe"
-                  class="subscribe__img"
+                  class="header__subscribe-img"
                 />
                 <div class="subscribe-info">
-                  <span class="subscribe__text">Subcribe now</span>
-                  <span class="subscribe__price">3 month for $19</span>
+                  <span class="subscribe-info__text">Subcribe now</span>
+                  <span class="subscribe-info__price">3 month for $19</span>
                 </div>
               </div>
               <!-- /.header__subscribe -->
-              <div class="header__sign">
+              <div class="sign">
                 <img
                   src="img/header/Man.svg"
                   alt="Icon: user"
@@ -83,7 +86,7 @@
             /></a>
             <div class="header-bottom__info">
               <span class="header-bottom__date">Monday, January 1, 2018</span>
-              <div class="header-bottom__weather">
+              <div class="weather">
                 <img
                   src="img/header/Sun.svg"
                   alt="Weather image"
@@ -99,7 +102,7 @@
         <!-- /.header-top -->
       </div>
       <!-- /.container -->
-      <div class="header-navbar">
+      <div class="navbar">
         <div class="container">
           <ul class="navbar-menu">
             <li class="navbar-menu__item">
@@ -193,32 +196,32 @@
         <!-- /.articles -->
 
         <div class="selection">
-          <div class="picture-block">
-            <div class="picture-block__item">
+          <ul class="content">
+            <li class="content__item content__item--active" id="food">
               <img
-                class="picture-block__img"
+                class="content__img"
                 src="img/recommended/slide-1.png"
-                alt="slide-1"
+                alt="food"
               />
-              <div class="picture-block__author">
+              <div class="content__author">
                 <img
                   src="img/recommended/avatar.png"
                   alt=""
-                  class="picture-block__author__avatar"
+                  class="content__author__avatar"
                 />
-                <div class="picture-block__author-name">
+                <div class="content__author-name">
                   By Benjamin Turner
-                  <span class="picture-block__job">Traveler</span>
+                  <span class="content__job">Traveler</span>
                 </div>
               </div>
-              <div class="picture-info">
-                <span class="picture-info__category">Destinations</span>
-                <h2 class="picture-info__title">
+              <div class="content-info">
+                <span class="content-info__category">Destinations</span>
+                <h2 class="content-info__title">
                   In Southeast England, White Cliffs and Fish
                 </h2>
 
                 <div class="button-block">
-                  <button class="button picture__button">
+                  <button class="button content__button">
                     <span class="button__text">Read more</span>
                     <img
                       src="img/recommended/Arrow.svg"
@@ -227,9 +230,13 @@
                     />
                   </button>
                   <div class="player">
-                    <div class="player__icon">
-                      <div class="player__icon-triangle"></div>
-                    </div>
+                    <button
+                      data-toggle="modal"
+                      class="player__icon"
+                      type="button"
+                    >
+                      <span class="player__icon-triangle"></span>
+                    </button>
                     <div class="player__info">
                       <span class="player__text"
                         >The chalk cliff of Beachy Head</span
@@ -239,63 +246,175 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-          <!-- /.picture__block -->
-          <div class="selection-choice">
-            <div class="choice__title">Recommended for you</div>
+            </li>
 
-            <div class="choice-card">
-              <span class="choice-card__title choice-card__title-bluegreen75"
+            <li class="content__item" id="cars">
+              <img
+                class="content__img"
+                src="img/recommended/cars.jpg"
+                alt="cars"
+              />
+            </li>
+
+            <li class="content__item" id="movies">
+              <img
+                class="content__img"
+                src="img/recommended/movies.jpg"
+                alt="movies"
+              />
+              <div class="content__author">
+                <img
+                  src="img/recommended/avatar.png"
+                  alt=""
+                  class="content__author__avatar"
+                />
+                <div class="content__author-name">
+                  By Benjamin Turner
+                  <span class="content__job">Traveler</span>
+                </div>
+              </div>
+            </li>
+
+            <li class="content__item" id="nfl">
+              <img
+                class="content__img"
+                src="img/recommended/nfl.jpg"
+                alt="nfl player"
+              />
+              <div class="content-info">
+                <span class="content-info__category">Destinations</span>
+                <h2 class="content-info__title">
+                  11 surprising stat rankings for active NFL players
+                </h2>
+
+                <div class="button-block">
+                  <button class="button content__button">
+                    <span class="button__text">Read more</span>
+                    <img
+                      src="img/recommended/Arrow.svg"
+                      alt="Icon: arrow"
+                      class="button__img"
+                    />
+                  </button>
+                  <div class="player">
+                    <button
+                      data-toggle="modal"
+                      class="player__icon"
+                      type="button"
+                    >
+                      <span class="player__icon-triangle"></span>
+                    </button>
+                    <div class="player__info">
+                      <span class="player__text"
+                        >The chalk cliff of Beachy Head</span
+                      >
+                      <span class="player__time">18:05</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+
+            <li class="content__item" id="reviews">
+              <img
+                class="content__img"
+                src="img/recommended/reviews.jpg"
+                alt="tech reviews"
+              />
+              <div class="content__author">
+                <img
+                  src="img/recommended/avatar.png"
+                  alt=""
+                  class="content__author__avatar"
+                />
+                <div class="content__author-name">
+                  By Benjamin Turner
+                  <span class="content__job">Traveler</span>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <!-- /.content -->
+          <ul class="tabs">
+            <li class="tabs__title">Recommended for&nbsp;you</li>
+
+            <li data-target="#food" class="tabs-item tabs-item--active">
+              <span class="tabs-item__title tabs-item__title-bluegreen75"
                 >Food</span
               >
-              <p class="choice-card__text choice-card__text-video">
+              <p class="tabs-item__text tabs-item__text-video">
                 For Chicken-Fried Steak, Too Much Is Just Enough
               </p>
-            </div>
+              <div
+                class="tabs-item__triangle tabs-item__triangle--active"
+              ></div>
+            </li>
 
-            <div class="choice-card">
-              <span class="choice-card__title choice-card__title-greyblue75"
+            <li data-target="#cars" class="tabs-item">
+              <span class="tabs-item__title tabs-item__title-greyblue75"
                 >Cars</span
               >
-              <p class="choice-card__text">
+              <p class="tabs-item__text">
                 Storm Has Car Dealers Doing Swift Business
               </p>
-            </div>
+              <div class="tabs-item__triangle"></div>
+            </li>
 
-            <div class="choice-card">
-              <span class="choice-card__title choice-card__title-purple75"
+            <li data-target="#movies" class="tabs-item">
+              <span class="tabs-item__title tabs-item__title-purple75"
                 >Movies</span
               >
-              <p class="choice-card__text">
+              <p class="tabs-item__text">
                 War Is Hell? In New Military Dramas, It’s One-Dimensional
               </p>
-            </div>
+              <div class="tabs-item__triangle"></div>
+            </li>
 
-            <div class="choice-card">
-              <span class="choice-card__title choice-card__title-orange75"
+            <li data-target="#nfl" class="tabs-item">
+              <span class="tabs-item__title tabs-item__title-orange75"
                 >NFL</span
               >
-              <p class="choice-card__text choice-card__text-video">
+              <p class="tabs-item__text tabs-item__text-video">
                 11 surprising stat rankings for active NFL players
               </p>
-            </div>
+              <div class="tabs-item__triangle"></div>
+            </li>
 
-            <div class="choice-card">
-              <span class="choice-card__title choice-card__title-green75"
+            <li data-target="#reviews" class="tabs-item">
+              <span class="tabs-item__title tabs-item__title-green75"
                 >Tech Reviews</span
               >
-              <p class="choice-card__text">
+              <p class="tabs-item__text">
                 The bookcases you can buy online and assemble yourself
               </p>
-            </div>
-          </div>
-          <!-- /.selection-choice -->
+              <div class="tabs-item__triangle"></div>
+            </li>
+          </ul>
+          <!-- /.tabs -->
         </div>
         <!-- /.selection -->
       </div>
       <!-- /.container -->
     </section>
     <!-- /.recommended -->
+
+    <div class="modal" tabindex="-1">
+      <div class="modal__overlay">
+        <a href="#" class="modal__close">
+          <img src="img/close.svg" alt="Icon: close" />
+        </a>
+        <iframe
+          class="modal__video"
+          src="https://www.youtube.com/embed/80flXdGto6E"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <!-- /.modal__dialog -->
+      </div>
+      <!-- /.modal__overlay -->
+    </div>
+    <!-- /.modal -->
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
