create: structure of infobox section

--- a/index.html
+++ b/index.html
@@ -234,9 +234,7 @@
                       data-toggle="modal"
                       class="player__icon"
                       type="button"
-                    >
-                      <span class="player__icon-triangle"></span>
-                    </button>
+                    ></button>
                     <div class="player__info">
                       <span class="player__text"
                         >The chalk cliff of Beachy Head</span
@@ -301,9 +299,7 @@
                       data-toggle="modal"
                       class="player__icon"
                       type="button"
-                    >
-                      <span class="player__icon-triangle"></span>
-                    </button>
+                    ></button>
                     <div class="player__info">
                       <span class="player__text"
                         >The chalk cliff of Beachy Head</span
@@ -397,6 +393,125 @@
       <!-- /.container -->
     </section>
     <!-- /.recommended -->
+
+    <section class="infobox">
+      <div class="container">
+        <div class="infobox-wrapper">
+          <div class="infobox__cars infobox-cars">
+            <span class="infobox__category">Cars</span>
+            <h3 class="infobox-cars__title"></h3>
+            <p class="infobox-cars__text"></p>
+            <img src="" alt="" class="infobox-cars__img" />
+            <div class="infobox-cars__footer">
+              <img src="" alt="" class="infobox-cars__avatar" />
+              <span class="infobox-cars__author"></span>
+              <span class="infobox-cars__excerpt"></span>
+              <div class="infobox-cars__counter counters">
+                <img src="" alt="" class="counters__comment" />
+                <span class="counters__comment-number"></span>
+              </div>
+            </div>
+            <!-- /.infobox-cars__footer -->
+          </div>
+          <!-- /.infobox__cars -->
+
+          <div class="infobox__art infobox-art">
+            <img src="" alt="" class="infobox-art__img" />
+            <span class="infobox-category"></span>
+            <h3 class="infobox-art__title"></h3>
+            <div class="infobox-art__footer">
+              <img src="" alt="" class="infobox-art__avatar" />
+              <span class="infobox-art__author"></span>
+              <div class="infobox-art__counters counters">
+                <span class="counters__date"></span>
+                <img src="" alt="" class="counters__comment" />
+                <span class="counters__comment-number"></span>
+                <img src="" alt="" class="counters__like" />
+                <span class="counters__like-number"></span>
+              </div>
+            </div>
+            <!-- /.infobox-art__footer -->
+          </div>
+          <!-- /.infobox__art -->
+          <div class="infobox__cat infobox-cat">
+            <img src="" alt="" class="infobox-cat__img" />
+            <h3 class="infobox-cat__title"></h3>
+          </div>
+          <!-- /.infobox__cat -->
+          <div class="infobox-item infobox__coffee">
+            <h3 class="infobox-item__title"></h3>
+            <p class="infobox-item__text"></p>
+            <span class="infobox-item__date"></span>
+          </div>
+          <!-- /.infobox__coffee -->
+          <div class="infobox-item infobox__stressful">
+            <h3 class="infobox-item__title"></h3>
+            <p class="infobox-item__text"></p>
+            <span class="infobox-item__date"></span>
+          </div>
+          <!-- /.infobox__stressful -->
+          <div class="infobox-item infobox__manufacture">
+            <h3 class="infobox-item__title"></h3>
+            <p class="infobox-item__text"></p>
+            <span class="infobox-item__date"></span>
+          </div>
+          <!-- /.infobox__manufacture -->
+          <div class="infobox-item infobox__lemon">
+            <h3 class="infobox-item__title"></h3>
+            <p class="infobox-item__text"></p>
+            <span class="infobox-item__date"></span>
+          </div>
+          <!-- /.infobox__lemon -->
+          <div class="infobox__columns infobox-columns">
+            <div class="infobox-columns__category"></div>
+            <div class="infobox-columns__article">
+              <h3 class="infobox-columns__title"></h3>
+              <div class="infobox-columns__author author">
+                <img src="" alt="" class="author__img" />
+                <div class="author__info">
+                  <span class="author__name"></span>
+                  <span class="author__job"></span>
+                </div>
+              </div>
+            </div>
+            <div class="infobox-columns__article">
+              <h3 class="infobox-columns__title"></h3>
+              <div class="infobox-columns__author author">
+                <img src="" alt="" class="author__img" />
+                <div class="author__info">
+                  <span class="author__name"></span>
+                  <span class="author__job"></span>
+                </div>
+              </div>
+            </div>
+            <div class="infobox-columns__article">
+              <h3 class="infobox-columns__title"></h3>
+              <div class="infobox-columns__author author">
+                <img src="" alt="" class="author__img" />
+                <div class="author__info">
+                  <span class="author__name"></span>
+                  <span class="author__job"></span>
+                </div>
+              </div>
+            </div>
+            <div class="infobox-columns__footer">
+              <h3 class="infobox-columns__title"></h3>
+              <div class="infobox-columns__author author">
+                <img src="" alt="" class="author__img" />
+                <div class="author__info">
+                  <span class="author__name"></span>
+                  <span class="author__job"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- /.infobox__columns -->
+        </div>
+        <!-- /.infobox-grid -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.infobox -->
 
     <div class="modal" tabindex="-1">
       <div class="modal__overlay">
