create: content for infobox section

--- a/index.html
+++ b/index.html
@@ -399,16 +399,36 @@
         <div class="infobox-wrapper">
           <div class="infobox__cars infobox-cars">
             <span class="infobox__category">Cars</span>
-            <h3 class="infobox-cars__title"></h3>
-            <p class="infobox-cars__text"></p>
-            <img src="" alt="" class="infobox-cars__img" />
+            <h3 class="infobox-cars__title">
+              The joy of replicas: A $ 5 million car for $ 50,000
+            </h3>
+            <p class="infobox-cars__text">
+              The 31-year-old self-taught engineer and former amateur racer
+              spends his days building artful recreations of one of most iconic
+              sports cars
+            </p>
+            <img
+              src="img/infobox/car.png"
+              alt="car"
+              class="infobox-cars__img"
+            />
             <div class="infobox-cars__footer">
-              <img src="" alt="" class="infobox-cars__avatar" />
-              <span class="infobox-cars__author"></span>
-              <span class="infobox-cars__excerpt"></span>
+              <img
+                src="img/infobox/cars-avatar.png"
+                alt="Avatar"
+                class="infobox-cars__avatar"
+              />
+              <span class="infobox-cars__author">Jessica Miller:</span>
+              <span class="infobox-cars__excerpt"
+                >Even as the ride-hailing service’s future remem…</span
+              >
               <div class="infobox-cars__counter counters">
-                <img src="" alt="" class="counters__comment" />
-                <span class="counters__comment-number"></span>
+                <img
+                  src="img/infobox/comment.svg"
+                  alt="Icon: comment"
+                  class="counters__comment"
+                />
+                <span class="counters__comment-number">342</span>
               </div>
             </div>
             <!-- /.infobox-cars__footer -->
@@ -416,94 +436,156 @@
           <!-- /.infobox__cars -->
 
           <div class="infobox__art infobox-art">
-            <img src="" alt="" class="infobox-art__img" />
-            <span class="infobox-category"></span>
-            <h3 class="infobox-art__title"></h3>
+            <div class="popular">Popular</div>
+            <img
+              src="img/infobox/art.png"
+              alt="art and design"
+              class="infobox-art__img"
+            />
+            <span class="infobox-category">Art & Design</span>
+            <h3 class="infobox-art__title">
+              Invisible ink: the weird world of tattoo removal – in pictures
+            </h3>
             <div class="infobox-art__footer">
-              <img src="" alt="" class="infobox-art__avatar" />
-              <span class="infobox-art__author"></span>
+              <img
+                src="img/infobox/art-avatar.png"
+                alt="avatar"
+                class="infobox-art__avatar"
+              />
+              <span class="infobox-art__author">By Sarah Jenkins</span>
               <div class="infobox-art__counters counters">
-                <span class="counters__date"></span>
-                <img src="" alt="" class="counters__comment" />
-                <span class="counters__comment-number"></span>
-                <img src="" alt="" class="counters__like" />
-                <span class="counters__like-number"></span>
+                <span class="counters__date">Sept 26</span>
+                <img
+                  src="img/infobox/comment.svg"
+                  alt="Icon: comment"
+                  class="counters__comment"
+                />
+                <span class="counters__comment-number">16</span>
+                <img
+                  src="img/infobox/like.svg"
+                  alt="Icon: like"
+                  class="counters__like"
+                />
+                <span class="counters__like-number">832</span>
               </div>
             </div>
             <!-- /.infobox-art__footer -->
           </div>
           <!-- /.infobox__art -->
           <div class="infobox__cat infobox-cat">
-            <img src="" alt="" class="infobox-cat__img" />
-            <h3 class="infobox-cat__title"></h3>
+            <img src="img/infobox/cat.png" alt="cat" class="infobox-cat__img" />
+            <h3 class="infobox-cat__title">
+              200+ Doomed Cats Saved From Euthanization
+            </h3>
           </div>
           <!-- /.infobox__cat -->
           <div class="infobox-item infobox__coffee">
-            <h3 class="infobox-item__title"></h3>
-            <p class="infobox-item__text"></p>
-            <span class="infobox-item__date"></span>
+            <h3 class="infobox-item__title">Is Coffee Bad for Bones?</h3>
+            <p class="infobox-item__text">
+              Coffee drinkers may excrete more calcium, but it doesn’t appear to
+              weaken bones
+            </p>
+            <span class="infobox-item__date">Oct 15</span>
           </div>
           <!-- /.infobox__coffee -->
           <div class="infobox-item infobox__stressful">
-            <h3 class="infobox-item__title"></h3>
-            <p class="infobox-item__text"></p>
-            <span class="infobox-item__date"></span>
+            <h3 class="infobox-item__title">It’s a Stressful World</h3>
+            <p class="infobox-item__text">
+              Can a cruise skeptic enjoy four days on the seas with his family
+              and a bunch of princesses?
+            </p>
+            <span class="infobox-item__date">Oct 14</span>
           </div>
           <!-- /.infobox__stressful -->
+
           <div class="infobox-item infobox__manufacture">
-            <h3 class="infobox-item__title"></h3>
-            <p class="infobox-item__text"></p>
-            <span class="infobox-item__date"></span>
+            <h3 class="infobox-item__title">What We Manufacture</h3>
+            <p class="infobox-item__text">
+              A global history of the factory and the modern world that all
+              should read
+            </p>
+            <span class="infobox-item__date">Oct 14</span>
           </div>
           <!-- /.infobox__manufacture -->
+
           <div class="infobox-item infobox__lemon">
-            <h3 class="infobox-item__title"></h3>
-            <p class="infobox-item__text"></p>
-            <span class="infobox-item__date"></span>
+            <h3 class="infobox-item__title">A Treat for Lemon Lovers</h3>
+            <p class="infobox-item__text">
+              This tangerine, ginger and chocolate tart has verve, depth and a
+              hint of spice
+            </p>
+            <span class="infobox-item__date">Oct 13</span>
           </div>
           <!-- /.infobox__lemon -->
+
           <div class="infobox__columns infobox-columns">
-            <div class="infobox-columns__category"></div>
+            <div class="infobox-columns__category">Columns</div>
             <div class="infobox-columns__article">
-              <h3 class="infobox-columns__title"></h3>
+              <img
+                src="img/infobox/Quote.svg"
+                alt="quote left"
+                class="infobox-columns__quote"
+              />
+              <h3 class="infobox-columns__title">
+                Architecture is the thoughtful making of space
+              </h3>
               <div class="infobox-columns__author author">
-                <img src="" alt="" class="author__img" />
+                <img
+                  src="img/infobox/columns-avatar-1.png"
+                  alt="avatar-1"
+                  class="author__img"
+                />
                 <div class="author__info">
-                  <span class="author__name"></span>
-                  <span class="author__job"></span>
+                  <span class="author__name">David Williams</span>
+                  <span class="author__job">Architect</span>
                 </div>
               </div>
             </div>
+
             <div class="infobox-columns__article">
-              <h3 class="infobox-columns__title"></h3>
+              <img
+                src="img/infobox/Quote.svg"
+                alt="quote left"
+                class="infobox-columns__quote"
+              />
+              <h3 class="infobox-columns__title">
+                The details are not the details. They make the design.
+              </h3>
               <div class="infobox-columns__author author">
-                <img src="" alt="" class="author__img" />
+                <img
+                  src="img/infobox/columns-avatar-2.png"
+                  alt="avatar-2"
+                  class="author__img"
+                />
                 <div class="author__info">
-                  <span class="author__name"></span>
-                  <span class="author__job"></span>
+                  <span class="author__name">Alexandra Green</span>
+                  <span class="author__job">Interior designer</span>
                 </div>
               </div>
             </div>
+
             <div class="infobox-columns__article">
-              <h3 class="infobox-columns__title"></h3>
+              <img
+                src="img/infobox/Quote.svg"
+                alt="quote left"
+                class="infobox-columns__quote"
+              />
+              <h3 class="infobox-columns__title">
+                Live life to the fullest, and focus on the positive
+              </h3>
               <div class="infobox-columns__author author">
-                <img src="" alt="" class="author__img" />
+                <img
+                  src="img/infobox/columns-avatar-3.png"
+                  alt="avatar-3"
+                  class="author__img"
+                />
                 <div class="author__info">
-                  <span class="author__name"></span>
-                  <span class="author__job"></span>
+                  <span class="author__name">Olivia Thompson</span>
+                  <span class="author__job">Coacher</span>
                 </div>
               </div>
             </div>
-            <div class="infobox-columns__footer">
-              <h3 class="infobox-columns__title"></h3>
-              <div class="infobox-columns__author author">
-                <img src="" alt="" class="author__img" />
-                <div class="author__info">
-                  <span class="author__name"></span>
-                  <span class="author__job"></span>
-                </div>
-              </div>
-            </div>
+            <div class="infobox-columns__footer">Read more</div>
           </div>
           <!-- /.infobox__columns -->
         </div>
