create: copy style for infobox from layout

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
               alt="art and design"
               class="infobox-art__img"
             />
-            <span class="infobox-category">Art & Design</span>
+            <span class="infobox-art__category">Art & Design</span>
             <h3 class="infobox-art__title">
               Invisible ink: the weird world of tattoo removal – in pictures
             </h3>
@@ -533,11 +533,11 @@
                 <img
                   src="img/infobox/columns-avatar-1.png"
                   alt="avatar-1"
-                  class="author__img"
+                  class="infobox-columns__avatar"
                 />
                 <div class="author__info">
-                  <span class="author__name">David Williams</span>
-                  <span class="author__job">Architect</span>
+                  <span class="infobox-columns__name">David Williams</span>
+                  <span class="infobox-columns__job">Architect</span>
                 </div>
               </div>
             </div>
@@ -555,11 +555,11 @@
                 <img
                   src="img/infobox/columns-avatar-2.png"
                   alt="avatar-2"
-                  class="author__img"
+                  class="infobox-columns__avatar"
                 />
                 <div class="author__info">
-                  <span class="author__name">Alexandra Green</span>
-                  <span class="author__job">Interior designer</span>
+                  <span class="infobox-columns__name">Alexandra Green</span>
+                  <span class="infobox-columns__job">Interior designer</span>
                 </div>
               </div>
             </div>
@@ -577,11 +577,11 @@
                 <img
                   src="img/infobox/columns-avatar-3.png"
                   alt="avatar-3"
-                  class="author__img"
+                  class="infobox-columns__avatar"
                 />
                 <div class="author__info">
-                  <span class="author__name">Olivia Thompson</span>
-                  <span class="author__job">Coacher</span>
+                  <span class="infobox-columns__name">Olivia Thompson</span>
+                  <span class="infobox-columns__job">Coacher</span>
                 </div>
               </div>
             </div>
