--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
     </header>
     <!-- /.header -->
     <section class="recommended">
+      <div class="recommended__backcolor"></div>
       <div class="container">
         <div class="article">
           <div class="article-card">
@@ -398,15 +399,19 @@
       <div class="container">
         <div class="infobox-wrapper">
           <div class="infobox__cars infobox-cars">
-            <span class="infobox__category">Cars</span>
-            <h3 class="infobox-cars__title">
-              The joy of replicas: A $ 5 million car for $ 50,000
-            </h3>
-            <p class="infobox-cars__text">
-              The 31-year-old self-taught engineer and former amateur racer
-              spends his days building artful recreations of one of most iconic
-              sports cars
-            </p>
+            <div class="infobox-cars__info">
+              <span class="infobox__category">Cars</span>
+              <a href="#" class="infobox-cars__title">
+                The joy of replicas: A&nbsp;$&nbsp;5&nbsp;million car
+                for&nbsp;$&nbsp;50,000
+              </a>
+              <p class="infobox-cars__text">
+                The 31-year-old self-taught engineer and former amateur racer
+                spends his days building artful recreations of one of most
+                iconic sports cars
+              </p>
+            </div>
+            <!-- /.infobox-cars__info -->
             <img
               src="img/infobox/car.png"
               alt="car"
@@ -418,17 +423,17 @@
                 alt="Avatar"
                 class="infobox-cars__avatar"
               />
-              <span class="infobox-cars__author">Jessica Miller:</span>
-              <span class="infobox-cars__excerpt"
-                >Even as the ride-hailing service’s future remem…</span
-              >
+              <a href="#" class="infobox-cars__author">Jessica Miller:</a>
+              <p class="infobox-cars__excerpt">
+                Even as the ride-hailing service’s future remember
+              </p>
               <div class="infobox-cars__counter counters">
                 <img
                   src="img/infobox/comment.svg"
                   alt="Icon: comment"
                   class="counters__comment"
                 />
-                <span class="counters__comment-number">342</span>
+                <span class="infobox-cars__number">342</span>
               </div>
             </div>
             <!-- /.infobox-cars__footer -->
@@ -442,45 +447,54 @@
               alt="art and design"
               class="infobox-art__img"
             />
-            <span class="infobox-art__category">Art & Design</span>
-            <h3 class="infobox-art__title">
-              Invisible ink: the weird world of tattoo removal – in pictures
-            </h3>
-            <div class="infobox-art__footer">
-              <img
-                src="img/infobox/art-avatar.png"
-                alt="avatar"
-                class="infobox-art__avatar"
-              />
-              <span class="infobox-art__author">By Sarah Jenkins</span>
-              <div class="infobox-art__counters counters">
-                <span class="counters__date">Sept 26</span>
+            <div class="infobox-art__info">
+              <span class="infobox-art__category">Art & Design</span>
+              <a href="#" class="infobox-art__title">
+                Invisible ink: the weird world of tattoo removal – in pictures
+              </a>
+              <div class="infobox-art__footer">
                 <img
-                  src="img/infobox/comment.svg"
-                  alt="Icon: comment"
-                  class="counters__comment"
+                  src="img/infobox/art-avatar.png"
+                  alt="avatar"
+                  class="infobox-art__avatar"
                 />
-                <span class="counters__comment-number">16</span>
-                <img
-                  src="img/infobox/like.svg"
-                  alt="Icon: like"
-                  class="counters__like"
-                />
-                <span class="counters__like-number">832</span>
+                <div class="infobox-art__right">
+                  <a href="#" class="infobox-art__author">By Sarah Jenkins</a>
+                  <div class="infobox-art__counters counters">
+                    <span class="counters__date">Sept 26</span>
+                    <div class="comment">
+                      <img
+                        src="img/infobox/comment.svg"
+                        alt="Icon: comment"
+                        class="counters__comment"
+                      />
+                      <span class="counters__comment-number">16</span>
+                    </div>
+                    <div class="like">
+                      <img
+                        src="img/infobox/like.svg"
+                        alt="Icon: like"
+                        class="counters__like"
+                      />
+                      <span class="counters__like-number">832</span>
+                    </div>
+                  </div>
+                </div>
               </div>
+              <!-- /.infobox-art__info -->
             </div>
             <!-- /.infobox-art__footer -->
           </div>
           <!-- /.infobox__art -->
           <div class="infobox__cat infobox-cat">
             <img src="img/infobox/cat.png" alt="cat" class="infobox-cat__img" />
-            <h3 class="infobox-cat__title">
-              200+ Doomed Cats Saved From Euthanization
-            </h3>
+            <a href="#" class="infobox-cat__title"
+              >200+ Doomed Cats Saved From Euthanization</a
+            >
           </div>
           <!-- /.infobox__cat -->
           <div class="infobox-item infobox__coffee">
-            <h3 class="infobox-item__title">Is Coffee Bad for Bones?</h3>
+            <a href="#" class="infobox-item__title">Is Coffee Bad for Bones?</a>
             <p class="infobox-item__text">
               Coffee drinkers may excrete more calcium, but it doesn’t appear to
               weaken bones
@@ -489,7 +503,7 @@
           </div>
           <!-- /.infobox__coffee -->
           <div class="infobox-item infobox__stressful">
-            <h3 class="infobox-item__title">It’s a Stressful World</h3>
+            <a href="#" class="infobox-item__title">It’s a Stressful World</a>
             <p class="infobox-item__text">
               Can a cruise skeptic enjoy four days on the seas with his family
               and a bunch of princesses?
@@ -499,7 +513,7 @@
           <!-- /.infobox__stressful -->
 
           <div class="infobox-item infobox__manufacture">
-            <h3 class="infobox-item__title">What We Manufacture</h3>
+            <a href="#" class="infobox-item__title">What We Manufacture</a>
             <p class="infobox-item__text">
               A global history of the factory and the modern world that all
               should read
@@ -509,7 +523,7 @@
           <!-- /.infobox__manufacture -->
 
           <div class="infobox-item infobox__lemon">
-            <h3 class="infobox-item__title">A Treat for Lemon Lovers</h3>
+            <a href="#" class="infobox-item__title">A Treat for Lemon Lovers</a>
             <p class="infobox-item__text">
               This tangerine, ginger and chocolate tart has verve, depth and a
               hint of spice
@@ -520,15 +534,11 @@
 
           <div class="infobox__columns infobox-columns">
             <div class="infobox-columns__category">Columns</div>
-            <div class="infobox-columns__article">
-              <img
-                src="img/infobox/Quote.svg"
-                alt="quote left"
-                class="infobox-columns__quote"
-              />
-              <h3 class="infobox-columns__title">
+            <div class="infobox-columns__left"></div>
+            <div class="infobox-columns__article infobox-columns__article-one">
+              <a href="#" class="infobox-columns__title">
                 Architecture is the thoughtful making of space
-              </h3>
+              </a>
               <div class="infobox-columns__author author">
                 <img
                   src="img/infobox/columns-avatar-1.png"
@@ -542,15 +552,10 @@
               </div>
             </div>
 
-            <div class="infobox-columns__article">
-              <img
-                src="img/infobox/Quote.svg"
-                alt="quote left"
-                class="infobox-columns__quote"
-              />
-              <h3 class="infobox-columns__title">
+            <div class="infobox-columns__article infobox-columns__article-two">
+              <a href="#" class="infobox-columns__title">
                 The details are not the details. They make the design.
-              </h3>
+              </a>
               <div class="infobox-columns__author author">
                 <img
                   src="img/infobox/columns-avatar-2.png"
@@ -564,15 +569,12 @@
               </div>
             </div>
 
-            <div class="infobox-columns__article">
-              <img
-                src="img/infobox/Quote.svg"
-                alt="quote left"
-                class="infobox-columns__quote"
-              />
-              <h3 class="infobox-columns__title">
+            <div
+              class="infobox-columns__article infobox-columns__article-three"
+            >
+              <a href="#" class="infobox-columns__title">
                 Live life to the fullest, and focus on the positive
-              </h3>
+              </a>
               <div class="infobox-columns__author author">
                 <img
                   src="img/infobox/columns-avatar-3.png"
@@ -585,7 +587,8 @@
                 </div>
               </div>
             </div>
-            <div class="infobox-columns__footer">Read more</div>
+            <div class="infobox-columns__right"></div>
+            <a href="#" class="infobox-columns__footer">Read more</a>
           </div>
           <!-- /.infobox__columns -->
         </div>
