create: adapt infobox

--- a/index.html
+++ b/index.html
@@ -401,10 +401,12 @@
           <div class="infobox__cars infobox-cars">
             <div class="infobox-cars__info">
               <span class="infobox__category">Cars</span>
-              <a href="#" class="infobox-cars__title">
-                The joy of replicas: A&nbsp;$&nbsp;5&nbsp;million car
-                for&nbsp;$&nbsp;50,000
-              </a>
+              <h3 class="infobox-title">
+                <a href="#" class="infobox-cars__title">
+                  The joy of replicas: A&nbsp;$&nbsp;5&nbsp;million car
+                  for&nbsp;$&nbsp;50,000
+                </a>
+              </h3>
               <p class="infobox-cars__text">
                 The 31-year-old self-taught engineer and former amateur racer
                 spends his days building artful recreations of one of most
@@ -450,7 +452,8 @@
             <div class="infobox-art__info">
               <span class="infobox-art__category">Art & Design</span>
               <a href="#" class="infobox-art__title">
-                Invisible ink: the weird world of tattoo removal – in pictures
+                Invisible ink: the weird world of tattoo
+                removal&nbsp;– in pictures
               </a>
               <div class="infobox-art__footer">
                 <img
