--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
             <div class="header-upper__left">
               <div class="header-section">
                 <button class="section-button">
-                  <span class="section-button__line"></span>
-                  <span
-                    class="section-button__line section-button__line-short"
-                  ></span>
-                  <span class="section-button__line"></span>
+                  <span class="section-button__group">
+                    <span class="section-button__line"></span>
+                    <span
+                      class="section-button__line section-button__line-short"
+                    ></span>
+                    <span class="section-button__line"></span>
+                  </span>
+                  <span class="section-button__text">Sections</span>
                 </button>
-                <span class="header-section__text">Sections</span>
               </div>
 
               <div class="search header__search">
@@ -44,26 +46,30 @@
             </div>
             <!-- /.header-upper__left -->
             <div class="header-upper__right">
-              <div class="header__subscribe">
+              <a href="#" class="header__subscribe">
                 <img
                   src="img/header/image-subscribe.png"
                   alt="Image subscribe"
                   class="header__subscribe-img"
                 />
-                <div class="subscribe-info">
-                  <span class="subscribe-info__text">Subcribe now</span>
-                  <span class="subscribe-info__price">3 month for $19</span>
-                </div>
-              </div>
+                <span class="subscribe-info">
+                  <span class="subscribe-info__text">
+                    Subcribe now
+                  </span>
+                  <span class="subscribe-info__price">
+                    3 month for $19
+                  </span>
+                </span>
+              </a>
               <!-- /.header__subscribe -->
-              <div class="sign">
+              <a href="#" class="sign">
                 <img
                   src="img/header/Man.svg"
                   alt="Icon: user"
                   class="sign__img"
                 />
                 <span class="sign__text">Sign in</span>
-              </div>
+              </a>
               <!-- /.header__user -->
             </div>
             <!-- /.header-upper__right -->
@@ -81,7 +87,7 @@
               </span>
             </div>
             <!-- /.header-bottom__title -->
-            <a href="index.html" class="header-logo"
+            <a href="index.html" class="header__logo"
               ><img src="img/header/logo.svg" alt="Logo" class="logo"
             /></a>
             <div class="header-bottom__info">
@@ -150,49 +156,49 @@
       <div class="recommended__backcolor"></div>
       <div class="container">
         <div class="article">
-          <div class="article-card">
-            <a href="#" class="article__title"
-              >25 Songs That Tell Us Where Music Is Going</a
+          <a href="#" class="article-card">
+            <span class="article__title"
+              >25 Songs That Tell Us Where Music Is Going</span
             >
             <img
               src="img/recommended/article-1.png"
               alt="article 1"
               class="article__img"
             />
-          </div>
+          </a>
           <div class="divider"></div>
-          <div class="article-card">
-            <a href="#" class="article__title"
-              >These Ancient Assassins Eat Their Own Kind</a
+          <a href="#" class="article-card">
+            <span class="article__title"
+              >These Ancient Assassins Eat Their Own Kind</span
             >
             <img
               src="img/recommended/article-2.png"
               alt="article 2"
               class="article__img"
             />
-          </div>
+          </a>
           <div class="divider"></div>
-          <div class="article-card">
-            <a href="#" class="article__title"
-              >How Do You Teach People to Love Difficult Music?</a
+          <a href="#" class="article-card">
+            <span class="article__title"
+              >How Do You Teach People to Love Difficult Music?</span
             >
             <img
               src="img/recommended/article-3.png"
               alt="article 3"
               class="article__img"
             />
-          </div>
+          </a>
           <div class="divider"></div>
-          <div class="article-card">
-            <a href="#" class="article__title"
-              >International Soccer’s Man of Mystery</a
+          <a href="#" class="article-card">
+            <span class="article__title"
+              >International Soccer’s Man of Mystery</span
             >
             <img
               src="img/recommended/article-4.png"
               alt="article 4"
               class="article__img"
             />
-          </div>
+          </a>
         </div>
         <!-- /.articles -->
 
@@ -205,20 +211,22 @@
                 alt="food"
               />
               <div class="content__author">
-                <img
-                  src="img/recommended/avatar.png"
-                  alt=""
-                  class="content__author__avatar"
-                />
-                <div class="content__author-name">
+                <a href="#">
+                  <img
+                    src="img/recommended/avatar.png"
+                    alt=""
+                    class="content__author__avatar"
+                  />
+                </a>
+                <a href="#" class="content__author-name">
                   By Benjamin Turner
                   <span class="content__job">Traveler</span>
-                </div>
+                </a>
               </div>
               <div class="content-info">
                 <span class="content-info__category">Destinations</span>
                 <h2 class="content-info__title">
-                  In Southeast England, White Cliffs and Fish
+                  <a href="#" class="content-info__link">In Southeast England, White Cliffs and Fish</a>
                 </h2>
 
                 <div class="button-block">
@@ -452,8 +460,8 @@
             <div class="infobox-art__info">
               <span class="infobox-art__category">Art & Design</span>
               <a href="#" class="infobox-art__title">
-                Invisible ink: the weird world of tattoo
-                removal&nbsp;– in pictures
+                Invisible ink: the weird world of tattoo removal&nbsp;–
+                in pictures
               </a>
               <div class="infobox-art__footer">
                 <img
