create: style for flowering&structure for page

--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
               <div class="content-info">
                 <span class="content-info__category">Destinations</span>
                 <h2 class="content-info__title">
-                  <a href="#" class="content-info__link">In Southeast England, White Cliffs and Fish</a>
+                  <a href="#" class="content-info__link"
+                    >In Southeast England, White Cliffs and Fish</a
+                  >
                 </h2>
 
                 <div class="button-block">
@@ -608,6 +610,204 @@
       <!-- /.container -->
     </section>
     <!-- /.infobox -->
+
+    <section class="flowering">     
+      <img class="flowering__img" src="img/flowering/flowering.png" alt="background flower">
+      <div class="container flowering-container">
+        <h2 class="flowering__title">The Big Bloom or «How Flowering</br>
+        Plants Changed the World»</h2>
+        <button class="button flowering-button">
+          <span class="button__text">Read more</span>
+          <img 
+            src="img/recommended/Arrow.svg"
+            alt="Icon: arrow"
+            class="button__img"
+          />
+        </button>
+      </div>
+    </section>
+    <!-- /.flowering -->
+
+    <section class="page">
+      <div class="container">
+        <ul class="page-list list">
+          <li class="list-item">
+            <img class="list-item__img" src="img/page/article-1.png" alt="image article 1">
+            <div class="list-item_info">
+              <img src="img/page/Bookmark.svg" alt="bookmark" class="bookmark">
+              <span class="list-item__category">Flights</span>
+              <h3 class="list-item__title">Passengers Suffer as Crowded Field Puts Pressure on Europe’s Airlines</h3>
+              <p class="list-item__text">Weaker carriers have fallen by the wayside amid fierce competition, while others have been hit by bad luck. The result:
+              thousands of canceled flights.</p>
+              <div class="list-item__counters counters">
+                <span class="counters__date">Aug 6</span>
+                <div class="comment">
+                  <img src="img/infobox/comment.svg" alt="Icon: comment" class="counters__comment" />
+                  <span class="counters__comment-number">342</span>
+                </div>
+                <div class="like">
+                  <img src="img/infobox/like.svg" alt="Icon: like" class="counters__like" />
+                  <span class="counters__like-number">830</span>
+                </div>
+              </div>  
+            </div>
+          </li>
+          <li class="list-item">
+            <img class="list-item__img" src="img/page/article-2.png" alt="image article 2">
+            <div class="list-item_info">
+              <img src="img/page/Bookmark.svg" alt="bookmark" class="bookmark">
+              <span class="list-item__category">Food</span>
+              <h3 class="list-item__title">Three Courses, 20 Euros: The Affordable Dining Renaissance in Paris</h3>
+              <p class="list-item__text">The Los Angeles area, for all of its culinary diversity, has not historically been thought of as a haven for bread
+              lovers. The area has a reputation as a place where gluten fears to tread.</p>
+              <div class="list-item__counters counters">
+                <span class="counters__date">Oct 7</span>
+                <div class="comment">
+                  <img src="img/infobox/comment.svg" alt="Icon: comment" class="counters__comment" />
+                  <span class="counters__comment-number">27</span>
+                </div>
+                <div class="like">
+                  <img src="img/infobox/like.svg" alt="Icon: like" class="counters__like" />
+                  <span class="counters__like-number">129</span>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list-item">
+            <img class="list-item__img" src="img/page/article-3.png" alt="image article 3">
+            <div class="list-item_info">
+              <img src="img/page/Bookmark.svg" alt="bookmark" class="bookmark">
+              <span class="list-item__category">Science</span>
+              <h3 class="list-item__title">Watch the High-Flying Physics of a Plant’s Exploding Fruits</h3>
+              <p class="list-item__text">Three undergradute physics majors and their professor worked out how the hairyflower wild petunia shoots tiny seeds more
+              than 20 feet through the air</p>
+              <div class="list-item__counters counters">
+                <span class="counters__date">Oct 11</span>
+                <div class="comment">
+                  <img src="img/infobox/comment.svg" alt="Icon: comment" class="counters__comment" />
+                  <span class="counters__comment-number">30</span>
+                </div>
+                <div class="like">
+                  <img src="img/infobox/like.svg" alt="Icon: like" class="counters__like" />
+                  <span class="counters__like-number">284</span>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list-item">
+            <img class="list-item__img" src="img/page/article-4.png" alt="image article 4">
+            <div class="list-item_info">
+              <img src="img/page/Bookmark.svg" alt="bookmark" class="bookmark">
+              <span class="list-item__category">Health</span>
+              <h3 class="list-item__title">How the Shape of Your Ears Affects What You Hear</h3>
+              <p class="list-item__text">We’re able to locate sound because our brains grasp the shape of our ears. When that shape changes, we need time and
+              practice to adapt. Ears are a peculiarly individual piece of anatomy.</p>
+              <div class="list-item__counters counters">
+                <span class="counters__date">Oct 19</span>
+                <div class="comment">
+                  <img src="img/infobox/comment.svg" alt="Icon: comment" class="counters__comment" />
+                  <span class="counters__comment-number">102</span>
+                </div>
+                <div class="like">
+                  <img src="img/infobox/like.svg" alt="Icon: like" class="counters__like" />
+                  <span class="counters__like-number">1293</span>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list-item">
+            <img class="list-item__img" src="img/page/article-5.png" alt="image article 5">
+            <div class="list-item_info">
+              <img src="img/page/Bookmark.svg" alt="bookmark" class="bookmark">
+              <span class="list-item__category">Science</span>
+              <h3 class="list-item__title">Forests Protect the Climate. A Future With More Storms Would Mean Trouble.</h3>
+              <p class="list-item__text">With an increase in extreme weather expected in the years to come, forests could be changed
+                permanently as the world
+                continues to warm</p>
+              <div class="list-item__counters counters">
+                <span class="counters__date">Oct 22</span>
+                <div class="comment">
+                  <img src="img/infobox/comment.svg" alt="Icon: comment" class="counters__comment" />
+                  <span class="counters__comment-number">5</span>
+                </div>
+                <div class="like">
+                  <img src="img/infobox/like.svg" alt="Icon: like" class="counters__like" />
+                  <span class="counters__like-number">82</span>
+                </div>
+              </div>  
+            </div>
+          </li>
+          <li class="list-item">
+            <img class="list-item__img" src="img/page/article-6.png" alt="image article 6">
+            <div class="list-item_info">
+              <img src="img/page/Bookmark.svg" alt="bookmark" class="bookmark">
+              <span class="list-item__category">Art & Design</span>
+              <h3 class="list-item__title">New Contemporary Institute Reverberates in Richmond’s Historic Landscape</h3>
+              <p class="list-item__text">The center, which will open in April, takes a bold look at race and other social issues that still resonate in the
+              region as well as the nation. A new Institute for Contemporary Art is set to open.</p>
+              <div class="list-item__counters counters">
+                <span class="counters__date">Oct 26</span>
+                <div class="comment">
+                  <img src="img/infobox/comment.svg" alt="Icon: comment" class="counters__comment" />
+                  <span class="counters__comment-number">101</span>
+                </div>
+                <div class="like">
+                  <img src="img/infobox/like.svg" alt="Icon: like" class="counters__like" />
+                  <span class="counters__like-number">432</span>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <!-- /.list -->
+        <ul class="page-column column">
+          <li class="page-column__item column__recommended">
+            <h3 class="page-column__title">Recommended for you</h3>
+          </li>
+          <li class="page-column__item column-item__one">
+            <img src="img/page/rec-1.png" alt="image" class="page-column__img">
+            <span class="page-column__item-title">Office Meetings Leave the Office</span>
+            <span class="page-column__item-time">15 minuts ago</span>
+          </li>
+          <li class="page-column__item">
+            <img src="img/page/rec-2.png" alt="image" class="page-column__img">
+            <span class="page-column__item-title">Experimental Vocal Music in Brooklyn</span>
+            <span class="page-column__item-time">32 minuts ago</span>
+          </li>
+          <li class="page-column__item">
+            <img src="img/page/rec-3.png" alt="image" class="page-column__img">
+            <span class="page-column__item-title">Google’s Influence Over Think Tanks</span>
+            <span class="page-column__item-time">38 minuts ago</span>
+          </li>
+          <li class="page-column__item">
+            <img src="img/page/rec-4.png" alt="image" class="page-column__img">
+            <span class="page-column__item-title">Homes for Sale in NYC and Connecticut</span>
+            <span class="page-column__item-time">53 minuts ago</span>
+          </li>
+          <li class="page-column__item">
+            <img src="img/page/rec-5.png" alt="image" class="page-column__img">
+            <span class="page-column__item-title">Are You There, Dad? It’s Me, Alice</span>
+            <span class="page-column__item-time">1 hour ago</span>
+          </li>
+          <li class="page-column__item">
+            <img src="img/page/rec-6.png" alt="image" class="page-column__img">
+            <span class="page-column__item-title">The New Punk Look: Lacy and Colorful</span>
+            <span class="page-column__item-time">1 hour ago</span>
+          </li>
+          <li class="page-column__item">
+            <img src="img/page/rec-7.png" alt="image" class="page-column__img">
+            <span class="page-column__item-title">Sunday Best in Harlem and Brooklyn</span>
+            <span class="page-column__item-time">2 hours ago</span>
+          </li>
+          <li class="page-column__item column__footer">
+            <span class="page-column__footer">Read more</span>
+          </li>
+        </ul>
+        <!-- /.column -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.page -->
 
     <div class="modal" tabindex="-1">
       <div class="modal__overlay">
